--- a/backend-rehab/.env.example
+++ b/backend-rehab/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080
+CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://localhost:8081,http://127.0.0.1:8081,http://localhost:8082,http://127.0.0.1:8082
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
