Describe your changes

--- a/backend-rehab/.env.example
+++ b/backend-rehab/.env.example
@@ -1,9 +1,20 @@
 APP_NAME=Laravel
+
+# Local development defaults
 APP_ENV=local
-APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://localhost:8081,http://127.0.0.1:8081,http://localhost:8082,http://127.0.0.1:8082
+CORS_ALLOWED_ORIGINS=http://localhost:8080,http://127.0.0.1:8080,http://localhost:8081,http://127.0.0.1:8081,http://localhost:8082,http://127.0.0.1:8082,http://localhost:5173,http://127.0.0.1:5173
+SESSION_DOMAIN=null
+
+# Production niqaatk.com deployment (uncomment on server and comment the local values above)
+# APP_ENV=production
+# APP_DEBUG=false
+# APP_URL=https://api.niqaatk.com
+# CORS_ALLOWED_ORIGINS=https://niqaatk.com,https://app.niqaatk.com,https://api.niqaatk.com
+# SESSION_DOMAIN=.niqaatk.com
+
+APP_KEY=
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -32,7 +43,6 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
