--- a/rehab.saQRCODE--main/.env.example
+++ b/rehab.saQRCODE--main/.env.example
@@ -1,1 +1,5 @@
-EXPO_PUBLIC_API_URL=http://localhost:8000/api/v1
+# Local development (default)
+EXPO_PUBLIC_API_URL=http://localhost:8082/api/v1
+
+# Production on app.niqaatk.com (uncomment on the server/build machine and comment the line above)
+# EXPO_PUBLIC_API_URL=https://api.niqaatk.com/api/v1
