--- a/Rehabsa-Fullsa-main/.env
+++ b/Rehabsa-Fullsa-main/.env
@@ -1,1 +1,5 @@
+# Local development (default)
 VITE_API_BASE_URL=http://localhost:8082/api/v1
+
+# Production on api.niqaatk.com (uncomment on the server and comment the line above)
+# VITE_API_BASE_URL=https://api.niqaatk.com/api/v1
