--- a/Rehabsa-Fullsa-main/.gitignore
+++ b/Rehabsa-Fullsa-main/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Ensure dashboard assets/images are tracked
+!/public/
+!/public/dashboard/
+!/public/dashboard/*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
