Describe your changes

--- a/backend-rehab/.env.example
+++ b/backend-rehab/.env.example
@@ -74,3 +74,16 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Apple Wallet development defaults
+PKPASS_TYPE_ID=pass.com.rehab.demo
+PKPASS_TEAM_ID=TEAMID1234
+PKPASS_ORGANIZATION="Rehab Loyalty"
+PKPASS_CERTIFICATE_PATH=
+PKPASS_CERTIFICATE_PASSWORD=
+
+GOOGLE_WALLET_ENABLED=true
+GOOGLE_WALLET_SERVICE_ACCOUNT=
+GOOGLE_WALLET_ISSUER_ID=
+GOOGLE_WALLET_CLASS_PREFIX=rehab
+GOOGLE_WALLET_ORIGIN=${APP_URL}
