--- a/rehab.saQRCODE--main/package.json
+++ b/rehab.saQRCODE--main/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.5",
+    "@zxing/browser": "^0.1.5",
     "expo": "~54.0.20",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^17.0.8",
