--- a/Rehabsa-Fullsa-main/.env
+++ b/Rehabsa-Fullsa-main/.env
@@ -3,3 +3,6 @@ VITE_API_BASE_URL=http://localhost:8082/api/v1
 
 # Production on api.niqaatk.com (uncomment on the server and comment the line above)
 # VITE_API_BASE_URL=https://api.niqaatk.com/api/v1
+
+
+VITE_VAPID_PUBLIC_KEY=BCciFwtbfb2-YOJkmXyLWFOsuid1FNFYsLRoMPX3uvy7Uqq403AT-woJhwgySW55O8PLZHrAZcQOZIqkF5y9g30
