--- a/backend-rehab/composer.json
+++ b/backend-rehab/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
+        "minishlink/web-push": "^10.0",
         "pkpass/pkpass": "^2.5"
     },
     "require-dev": {
